--- a/intro-2-pods/go-samp-pod.yaml
+++ b/intro-2-pods/go-samp-pod.yaml
@@ -5,13 +5,6 @@ metadata:
 spec:
   containers:
   - name: go-samp
-    image: ghcr.io/k8s-go-samp:v0.0.0
+    image: ghcr.io/jockdarock/k8s-go-samp:v0.0.0
     ports:
     - containerPort: 8080
-    resources:
-      limits:
-        cpu: 100m
-        memory: 100Mi
-      requests:
-        cpu: 20m
-        memory: 20Mi
