--- a/sample-apps/golang/Dockerfile
+++ b/sample-apps/golang/Dockerfile
@@ -13,6 +13,7 @@ FROM alpine
 RUN apk add --no-cache libc6-compat
 
 COPY --from=golang-build /app-build/hello /usr/local/bin/hello
+COPY --from=golang-build /app-build/static ./static
 RUN chmod +x /usr/local/bin/hello
 
 CMD ["/usr/local/bin/hello"]
