--- a/intro-2-svc/nodejs-samp-deploy.yaml
+++ b/intro-2-svc/nodejs-samp-deploy.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: go-samp
-  namespace: gogogo
+  name: nodejs-samp
+  namespace: default
   labels:
-    app: go-samp
+    app: nodejs-samp
 spec:
-  replicas: 1
+  replicas: 5
   selector:
     matchLabels: 
-      name: go-samp
+      name: nodejs-samp
   template:
     metadata:
       labels:
-        app: go-samp
-        name: go-samp
+        app: nodejs-samp
+        name: nodejs-samp
     spec:
       containers:
-      - image: ghcr.io/jockdarock/k8s-go-samp:v0.0.1
-        name: go-samp
+      - image: ghcr.io/jockdarock/k8s-nodejs-samp:v0.0.0
+        name: nodejs-samp
         resources:
           requests:
             memory: "20Mi"
@@ -27,5 +27,5 @@ spec:
             memory: "100Mi"
             cpu: "100m"
         ports:
-        - containerPort: 8080
+        - containerPort: 8081
       restartPolicy: Always
